# ElectricalCircuitSimulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: dotnet-desktop.yml
Circuits/: Circuit1.txt  Circuit2.txt  Circuit3.txt  Circuit4.txt  Circuit5.txt  ParallelRLC.txt  SeriesRC.txt  SeriesRL.txt  SeriesRLC.txt  VoltageDivider.txt
ElectricalCircuitSimulator/: CMakeLists.txt  ElectricalCircuitSimulator.sln
ElectricalCircuitSimulator/ElectricalCircuitSimulator/: App.xaml  App.xaml.cs  ElectricalCircuitSimulator.csproj  MainWindow.xaml  MainWindow.xaml.cs
ElectricalCircuitSimulator/SimulationEngine/: CMakeLists.txt  Capacitor.cpp  Capacitor.h  CircuitComponent.cpp  CircuitComponent.h  GroundedVoltageSource.cpp  GroundedVoltageSource.h  Inductor.cpp  Inductor.h  LinearCircuit.cpp  LinearCircuit.h  Matrix.cpp  Matrix.h  Resistor.cpp  Resistor.h  SimulationEngine.vcxproj  SimulationEngine.vcxproj.filters
ElectricalCircuitSimulator/SimulationEngineBindingsC/: SimulationEngineBindingsC.vcxproj  SimulationEngineBindingsC.vcxproj.filters
ElectricalCircuitSimulator/SimulationEngineBindingsCSharp/: LinearCircuit.cs  SimulationEngineBindingsCSharp.csproj
ElectricalCircuitSimulator/SimulationEngineWrapper/: AssemblyInfo.cpp  CMakeLists.txt  SimulationEngineWrapper.cpp  SimulationEngineWrapper.h  SimulationEngineWrapper.vcxproj  SimulationEngineWrapper.vcxproj.filters
ElectricalCircuitSimulator/SimulationEngineWrapper/include/: SimulationEngineWrapper.h
ElectricalCircuitSimulator/SimulationEngineWrapper/src/: AssemblyInfo.cpp
(+32 files in other folders)
